# reference_manager

./: .gitignore  README.md  requirements.txt  setup.cfg
.streamlit/: config.toml
src/reference_manager/: main.py
src/reference_manager/model/: __init__.py  creator.py  descriptors.py  fields.py  references.py
src/reference_manager/pages/: 01_😺_kittens.py  kittens.py
src/reference_manager/utils/: __init__.py  font_styler.py
