[metadata]
name = reference_manager
version = 0.1.0
author = dmitrylala
author_email = dim.nesterov2015@gmail.com
description = Reference Manager for faster references creation
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/dmitrylala/reference_manager

[options]
python_requires = >=3.8
packages = reference_manager
package_dir =
    =src
zip_safe = no
;install_requires =
;    streamlit